--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Color Picker</string>
+    <string name="app_name">Scheme</string>
     <string name="start_view">Start View</string>
     <string name="backdrop">Backdrop</string>
     <string name="to_gallery">To Gallery</string>
