ColorPickerActivity and ColorModel

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_pinpoint">PinpointActivity</string>
     <string name="pinpoint_view">Pinpoint View</string>
+    <string name="title_activity_color_picker">ColorPickerActivity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
 
 </resources>
