(very) raw displayInfo

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,7 +16,8 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-    <string name="current_color">current color</string>
+    <string name="current_hexcode">current hex code</string>
+    <string name="current_info">current info</string>
     
 
 </resources>
