fixed first color pick

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,6 +18,6 @@
     <string name="title_section3">Section 3</string>
     <string name="current_hexcode">current hex code</string>
     <string name="current_info">current info</string>
-    
+    <string name="title_activity_color_picker_activity2">ColorPickerActivity2</string>
 
 </resources>
