--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,9 @@
     <string name="current_hexcode">current hex code</string>
     <string name="current_info">current info</string>
     <string name="title_activity_color_picker_activity2">ColorPickerActivity2</string>
+    <string name="action_search">Search</string>
+    <string name="action_by_hue">By Hue</string>
+    <string name="action_by_saturation">By Saturation</string>
+    <string name="action_by_value">By Brightness</string>
 
 </resources>
