--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="action_search">Search</string>
     <string name="action_by_hue">By Hue</string>
     <string name="action_by_saturation">By Saturation</string>
-    <string name="action_by_value">By Brightness</string>
+    <string name="action_by_value">By Value</string>
 
 </resources>
