--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="add">Add</string>
     <string name="new_palette">New Palette</string>
     <string name="palette_file_key">PALETTE_FILE_KEY</string>
+    <string name="palette_name">palette name</string>
 
 
 </resources>
