--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -45,7 +45,9 @@
     <string name="create">Create</string>
     <string name="action_add_to_palette">Add to Palette</string>
     <string name="action_create_palette">Create a Palette</string>
-    
-
+    <string name="title_activity_my_palettes">MyPalettesActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_example">Example action</string>
 
 </resources>
