--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,17 +8,14 @@
     <string name="to_camera">To Camera</string>
     <string name="to_picker">To Picker</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_gallery">GalleryActivity</string>
+    <string name="title_activity_gallery">Choose from Gallery</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_pinpoint">PinpointActivity</string>
+    <string name="title_activity_pinpoint">Pinpoint a Color</string>
     <string name="pinpoint_view">Pinpoint View</string>
-    <string name="title_activity_color_picker">ColorPickerActivity</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_activity_color_picker">Color Picker</string>
     <string name="current_hexcode">current hex code</string>
     <string name="current_info">current info</string>
-    <string name="title_activity_color_picker_activity">ColorPickerActivity</string>
+    <string name="title_activity_color_picker_activity">Color Picker</string>
     <string name="action_search">Search</string>
     <string name="action_by_hue">By Hue</string>
     <string name="action_by_saturation">By Saturation</string>
@@ -45,18 +42,19 @@
     <string name="create">Create</string>
     <string name="action_add_to_palette">Add to Palette</string>
     <string name="action_create_palette">New Palette</string>
-    <string name="title_activity_my_palettes">MyPalettesActivity</string>
+    <string name="title_activity_my_palettes">My Palettes</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="drawer_open">Open Drawer</string>
     <string name="drawer_close">Close Drawer</string>
-    <string name="action_websearch">Web search</string>
-    <string name="app_not_available">Sorry, there\'s no web browser available</string>
     <string name="action_delete_palette">Delete Palette</string>
     <string name="action_edit_palette">Edit Palette</string>
     <string name="action_rename_palette">Rename Palette</string>
     <string name="confirm_delete">Delete Palette </string>
     <string name="ok">OK</string>
+    <string name="title_activity_first_palette">No Palettes</string>
+    <string name="create_first_palette">Create Palette</string>
+    <string name="no_palettes">No saved palettes.</string>
 
 </resources>
